--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,8 @@ APP_DEBUG=true
 APP_URL=http://localhost
 
 BOT_BACKEND_URL=http://localhost:3000
+# Discord URL to add bot to server
+BOT_DISCORD_URL=
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
